# game_engine_glfw

./: CMakeLists.txt
apps/: CMakeLists.txt  app.cpp
src/: CMakeLists.txt  main.cpp  unittest.cpp
src/core/: CMakeLists.txt  window.cpp  window.h
